<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.aksw</groupId>
	<artifactId>hawk</artifactId>
	<version>0.2.1</version>
	<packaging>jar</packaging>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>1.2.4.RELEASE</version>
	</parent>
	<repositories>
		<repository>
			<id>clojars.org</id>
			<url>http://clojars.org/repo</url>
		</repository>
		<repository>
			<id>Apache Repo Central</id>
			<name>Apache Repository</name>
			<url>http://repo.maven.apache.org/maven2</url>
		</repository>
		<!-- <repository> -->
		<!-- <id>eclipse</id> -->
		<!-- <name>Eclipse Maven Repository</name> -->
		<!-- <url>http://maven.eclipse.org/nexus/content/groups/maven-central</url> -->
		<!-- </repository> -->
		<repository>
			<id>maven.aksw.internal</id>
			<name>University Leipzig, AKSW Maven2 Repository</name>
			<url>http://maven.aksw.org/archiva/repository/internal</url>
		</repository>
		<repository>
			<id>maven.aksw.snapshots</id>
			<name>University Leipzig, AKSW Maven2 Repository</name>
			<url>http://maven.aksw.org/archiva/repository/snapshots</url>
		</repository>
		<repository>
			<id>spring-releases</id>
			<url>https://repo.spring.io/libs-release</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>spring-releases</id>
			<url>https://repo.spring.io/libs-release</url>
		</pluginRepository>
	</pluginRepositories>
	<properties>
		<java.version>1.8</java.version>
		<slf4j.version>1.7.5</slf4j.version>
		<lucene.version>4.6.0</lucene.version>
		<junit.version>4.11</junit.version>
	</properties>
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<systemProperties>
						<JAVA_OPTS>-Xms415m -Xmx16G -XX:MaxPermSize=1G</JAVA_OPTS>
					</systemProperties>
					<mainClass>org.aksw.hawk.webservice.WebApplication</mainClass>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<configuration>
					<executable>java</executable>
					<arguments>
						<argument>-Xms512m</argument>
						<argument>-Xmx6G</argument>
						<argument>-XX:NewRatio=3</argument>
						<argument>-XX:+PrintGCTimeStamps</argument>
						<argument>-XX:+PrintGCDetails</argument>
						<argument>-Xloggc:gc.log</argument>
						<argument>-classpath</argument>
						<classpath />
						<argument>org.aksw.hawk.experiment.QALD6_Pipeline</argument>
					</arguments>
				</configuration>
			</plugin>
			<!-- <plugin> -->
			<!-- <artifactId>maven-assembly-plugin</artifactId> -->
			<!-- <version>2.4</version> -->
			<!-- <configuration> -->
			<!-- <descriptorRefs> -->
			<!-- <descriptorRef>jar-with-dependencies</descriptorRef> -->
			<!-- </descriptorRefs> -->
			<!-- <archive> -->
			<!-- <manifest> -->
			<!-- <mainClass>org.aksw.hawk.controller.PipelineController_QALD4</mainClass> -->
			<!-- </manifest> -->
			<!-- </archive> -->
			<!-- </configuration> -->
			<!-- </plugin> -->
		</plugins>


	</build>
	<dependencies>
		<!-- Junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
		</dependency>
		<!-- slf4j: Logging API -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<!-- slf4j: Logging Binding -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<!-- Lucene -->
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-core</artifactId>
			<version>${lucene.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-suggest</artifactId>
			<version>${lucene.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-queryparser</artifactId>
			<version>${lucene.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-analyzers-common</artifactId>
			<version>${lucene.version}</version>
		</dependency>
		<!-- NIF document creator for testing spotter -->
		<dependency>
			<groupId>org.aksw</groupId>
			<artifactId>gerbil.nif.transfer</artifactId>
			<version>1.2.0</version>
			<exclusions>
				<exclusion>
					<artifactId>jena-core</artifactId>
					<groupId>org.apache.jena</groupId>
				</exclusion>
				<exclusion>
					<artifactId>jena-arq</artifactId>
					<groupId>org.apache.jena</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- Sparql -->
		<dependency>
    		<groupId>org.aksw.jena-sparql-api</groupId>
    		<artifactId>jena-sparql-api-core</artifactId>
    		<version>3.0.1-1</version>
		</dependency>
		<dependency>
  		  <groupId>org.aksw.jena-sparql-api</groupId>
    		<artifactId>jena-sparql-api-cache-h2</artifactId>
   		 <version>3.0.1-1</version>
		</dependency>
		<!-- Predicate-Argument Trees -->
		<dependency>
			<groupId>com.clearnlp</groupId>
			<artifactId>clearnlp</artifactId>
			<version>2.0.2</version>
			<exclusions>
				<exclusion>
					<artifactId>guava</artifactId>
					<groupId>com.google.guava</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.clearnlp</groupId>
			<artifactId>clearnlp-general-en-dep</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>com.clearnlp</groupId>
			<artifactId>clearnlp-general-en-pos</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>com.clearnlp</groupId>
			<artifactId>clearnlp-dictionary</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>com.clearnlp</groupId>
			<artifactId>clearnlp-general-en-srl</artifactId>
			<version>1.1</version>
		</dependency>

		<!-- Mutable Pair -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.1</version>
		</dependency>
		<!-- JSON -->
		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
		</dependency>
		<!-- OpenRDF for streamline reading big files --><!-- Sesame -->
		<dependency>
			<groupId>org.openrdf.sesame</groupId>
			<artifactId>sesame-runtime</artifactId>
			<version>2.7.0-beta1</version>
		</dependency>
		<dependency>
			<groupId>org.openrdf.sesame</groupId>
			<artifactId>sesame-rio-turtle</artifactId>
			<version>2.7.0-beta1</version>
		</dependency>
		<!-- OpenNLP for sentence detection -->
		<dependency>
			<groupId>org.apache.opennlp</groupId>
			<artifactId>opennlp-tools</artifactId>
			<version>1.5.3</version>
		</dependency>
		<!-- TreeLayout -->
		<dependency>
			<groupId>org.abego.treelayout</groupId>
			<artifactId>org.abego.treelayout.core</artifactId>
			<version>1.0.1</version>
		</dependency>
		<!-- for Debugging, IO Fileutils -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
		</dependency>
		<!-- JAMON monitoring -->
		<dependency>
			<groupId>com.jamonapi</groupId>
			<artifactId>jamon</artifactId>
			<version>2.80</version>
		</dependency>
		<!-- Restful webservice -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<exclusions>
				<exclusion>
					<artifactId>logback-classic</artifactId>
					<groupId>ch.qos.logback</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.json</groupId>
			<artifactId>javax.json-api</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish</groupId>
			<artifactId>javax.json</artifactId>
			<version>1.0.4</version>
		</dependency>

		<dependency>
			<groupId>org.aksw.qa</groupId>
			<artifactId>datasets</artifactId>
			<version>0.0.4-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.aksw.qa</groupId>
			<artifactId>commons</artifactId>
			<version>0.0.11-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>edu.stanford.nlp</groupId>
			<artifactId>stanford-corenlp</artifactId>
			<version>3.6.0</version>
		</dependency>
		<dependency>
			<groupId>edu.stanford.nlp</groupId>
			<artifactId>stanford-corenlp</artifactId>
			<version>3.6.0</version>
			<classifier>models</classifier>
		</dependency>
		<dependency>
			<groupId>com.google.protobuf</groupId>
			<artifactId>protobuf-java</artifactId>
			<version>2.6.1</version>
		</dependency>
		<!-- http://mvnrepository.com/artifact/xml-apis/xml-apis resolving no class 
			def found conflict -->
		<dependency>
			<groupId>xml-apis</groupId>
			<artifactId>xml-apis</artifactId>
			<version>1.4.01</version>
		</dependency>
	</dependencies>
</project>
